Fix issues with locations. Add lodash library. Basic search route controls

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
   <script src="lib/leaflet/leaflet.js"></script>
   <script src="lib/leaflet/angular-leaflet-directive.min.js"></script>
 
+  <script src="lib/lodash.min.js"></script>
+
   <script src="lib/ng-cordova.min.js"></script>
   <script src="cordova.js"></script>
 
